<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FimActivity">

    <TextView
        android:id="@+id/textParabens"
        android:layout_width="338dp"
        android:layout_height="141dp"
        android:text="@string/parab_ns"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Compat.Notification"
        android:textColor="@color/white"
        android:textDirection="firstStrongRtl"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="30dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textObteve"
        android:layout_width="320dp"
        android:layout_height="71dp"
        android:text="@string/voc_obteve"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textParabens" />

    <TextView
        android:id="@+id/textAcertos"
        android:layout_width="137dp"
        android:layout_height="196dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="303dp"
        android:layout_height="86dp"
        android:text="@string/acertos"
        android:textAlignment="center"
        android:textColor="@color/title"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAcertos"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/buttonReiniciar"
        android:layout_width="193dp"
        android:layout_height="49dp"
        android:text="@string/reiniciar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>